--- a/driver_loader/driver_loader.vcxproj.filters
+++ b/driver_loader/driver_loader.vcxproj.filters
@@ -17,7 +17,7 @@
     <ClCompile Include="sourse\main.cpp">
       <Filter>sourse</Filter>
     </ClCompile>
-    <ClCompile Include="sourse\rtcore_binary.h">
+    <ClCompile Include="sourse\providers\rtcore\rtcore_binary.h">
       <Filter>utils</Filter>
     </ClCompile>
     <ClCompile Include="sourse\utils\utils.cpp">
@@ -26,7 +26,10 @@
     <ClCompile Include="sourse\utils\scanner.cpp">
       <Filter>sourse</Filter>
     </ClCompile>
-    <ClCompile Include="sourse\rtcore.cpp">
+    <ClCompile Include="sourse\providers\rtcore\rtcore.cpp">
+      <Filter>sourse</Filter>
+    </ClCompile>
+    <ClCompile Include="sourse\provider.cpp">
       <Filter>sourse</Filter>
     </ClCompile>
   </ItemGroup>
@@ -43,14 +46,15 @@
     <ClInclude Include="sourse\utils\scanner.h">
       <Filter>utils</Filter>
     </ClInclude>
-    <ClInclude Include="sourse\rtcore.h">
-      <Filter>sourse</Filter>
-    </ClInclude>
     <ClInclude Include="sourse\utils\ntdll.h">
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="sourse\utils\debug.h">
       <Filter>utils</Filter>
     </ClInclude>
+    <ClInclude Include="sourse\providers\rtcore\rtcore.h">
+      <Filter>sourse</Filter>
+    </ClInclude>
+    <ClInclude Include="sourse\provider.h" />
   </ItemGroup>
 </Project>
