--- a/driver_loader/driver_loader.vcxproj
+++ b/driver_loader/driver_loader.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{dcca3016-22ed-43a6-bd3c-8be85a82a517}</ProjectGuid>
     <RootNamespace>DriverLoader</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.26100.0</WindowsTargetPlatformVersion>
     <ProjectName>driver_loader</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -96,6 +96,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>6387;5103;4005</DisableSpecificWarnings>
+      <LanguageStandard_C>stdclatest</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -116,6 +117,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>6387;5103;4005</DisableSpecificWarnings>
+      <LanguageStandard_C>stdclatest</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,6 +138,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>6387;5103;4005;6271</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard_C>stdclatest</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -156,6 +159,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>6387;5103;4005</DisableSpecificWarnings>
+      <LanguageStandard_C>stdclatest</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -173,12 +177,16 @@
     <ClCompile Include="sourse\dse_killer.cpp" />
     <ClCompile Include="sourse\main.cpp" />
     <ClCompile Include="config.h" />
+    <ClCompile Include="sourse\providers\ntiomsi\ntiomsi.cpp" />
+    <ClCompile Include="sourse\providers\ntiomsi\ntiomsi_binary.h" />
     <ClCompile Include="sourse\utils\scanner.cpp" />
     <ClCompile Include="sourse\utils\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sourse\provider.h" />
+    <ClInclude Include="sourse\providers\ntiomsi\ntiomsi.h" />
     <ClInclude Include="sourse\utils\debug.h" />
+    <ClInclude Include="sourse\utils\nt.h" />
     <ClInclude Include="sourse\utils\ntdll.h" />
     <ClInclude Include="sourse\providers\rtcore\rtcore.h" />
     <ClInclude Include="sourse\utils\ntstatus.h" />
